# rustkube-node

./: .gitignore  Cargo.toml  README.md
cmd/kube-proxy/: Cargo.toml
cmd/kube-proxy/src/: main.rs
cmd/kubelet/: Cargo.toml
cmd/kubelet/src/: main.rs
crates/cni/src/: bridge.rs
crates/kube-proxy/: Cargo.toml
crates/kube-proxy/src/: lib.rs  service_map.rs
crates/kubelet/: Cargo.toml
crates/kubelet/src/: checkpoint.rs  lib.rs  node_status.rs  pod_manager.rs  vm_runtime.rs
deploy/: gen-pki.sh
deploy/systemd/: kube-proxy.service  kubelet.service
deploy/terragrunt/: root.hcl
deploy/terragrunt/rknode/: terragrunt.hcl
deploy/terragrunt/rknode/templates/: master-user-data.yaml.tftpl  node-user-data.yaml.tftpl
deploy/test-cluster/: README.md  config.sh  down.sh  up.sh  verify.sh
docs/planning/: container-startup.md
packaging/: build-packages.sh
packaging/deb/: control.in
packaging/env/: kube-proxy.env  kubelet.env
packaging/rpm/: rustkube-node.spec
pkg/cni/: Cargo.toml
pkg/cni/src/: bridge.rs  cni_types.rs  ebpf_encap.rs  invoker.rs  ipam.rs  lib.rs  vxlan.rs
pkg/kubelet/: Cargo.toml  build.rs
pkg/kubelet/src/: client.rs  cri.rs  cri_client.rs  cri_grpc.rs  csi.rs  health.rs  kubeconfig.rs  kubelet.rs  lib.rs  node_status.rs  pod_manager.rs  runtime.rs  server.rs  vm_migrate.rs  vm_runtime.rs
pkg/kubelet/tests/: cri_grpc_roundtrip.rs
pkg/proxy/: Cargo.toml
pkg/proxy/src/: ebpf.rs  endpoints.rs  iptables.rs  lib.rs  netpol.rs  proxy.rs
