[package]
name = "kube-proxy"
description = "Kubernetes service proxy (kube-proxy) — command entrypoint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kube-proxy"
path = "src/main.rs"

[dependencies]
proxy = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
