[package]
name = "kubelet"
description = "Node agent for RustKube (CRI client, pod lifecycle)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apimachinery = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }


[target.'cfg(target_os = "linux")'.dependencies]
libcontainer = { workspace = true }
oci-spec = { workspace = true }
nix = { workspace = true }
