[package]
name = "kubelet"
description = "Node agent for RustKube (CRI client, pod lifecycle)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apimachinery = { workspace = true }
cni = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tower = { version = "0.5" }
hyper-util = { version = "0.1" }
axum = { version = "0.7" }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { workspace = true }
rcgen = "0.13"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }


[target.'cfg(target_os = "linux")'.dependencies]
libcontainer = { workspace = true }
oci-spec = { workspace = true }
nix = { workspace = true }
libc = "0.2"

[dev-dependencies]
tokio-stream = { workspace = true, features = ["net"] }

[build-dependencies]
tonic-build = { workspace = true }
